# vexcl

./: .appveyor.yml  .clang_complete  .gitignore  .travis.yml  CMakeLists.txt  DEPENDS.md  INSTALL.md  LICENSE  LICENSE.md  README.md  annotated.html  backend_2cuda_2csr_8inl.html  backend_2cuda_2hybrid__ell_8inl.html  backend_8hpp.html  backend_8hpp__dep__incl.map  backend_8hpp__dep__incl.md5  backend_8hpp__incl.map  backend_8hpp__incl.md5  backtrace_8hpp.html  backtrace_8hpp__dep__incl.map  backtrace_8hpp__dep__incl.md5  backtrace_8hpp__incl.map  backtrace_8hpp__incl.md5  boost__compute_8hpp.html  boost__compute_8hpp__incl.map  boost__compute_8hpp__incl.md5  build_init  build_n_test  cache_8hpp.html  cache_8hpp__dep__incl.map  cache_8hpp__dep__incl.md5  cache_8hpp__incl.map  cache_8hpp__incl.md5  cast_8hpp.html  cast_8hpp__dep__incl.map  cast_8hpp__dep__incl.md5  cast_8hpp__incl.map  cast_8hpp__incl.md5  ccsr_8hpp.html  ccsr_8hpp__dep__incl.map  (+584 more)
.travis/: install_amd_sdk.sh  install_boost.sh  opencl_install.sh
CL/: cl.hpp  cl2.hpp  cl_platform.h
cmake/: CMakeLists.txt  FindFFTW.cmake  FindOpenCL.cmake  VexCLConfig.cmake  VexCLConfig.cmake.in  VexCLTools.cmake
cmake/opencl/: FindOpenCL.cmake
doc/: CMakeLists.txt  Doxyfile.cmake  gh.css
docs/: cmake.rst  conf.py  index.rst  primitives.rst
examples/: CMakeLists.txt  benchmark.cpp  boost.compute.cpp  cg.cpp  damped_oscillator.cpp  deduce.cpp  devlist.cpp  dummy.cpp  exclusive.cpp  fft.cpp  fft_benchmark.cpp  fft_profile.cpp  fft_verify.cpp  maxeler.cpp  mba_benchmark.cpp  mpitests.cpp  multiex.cpp  multiplatform.cpp  nn_max.cpp  odeint_symbolic.cpp  profile.cpp  profiler.cpp  profiler.h  profiling.cpp  proto_test.cpp  readme_example_1.cpp  readme_example_2.cpp  readme_example_3.cpp  readme_example_4.cpp  show_profiling_data.m  spmv.cpp  svm.cpp  symbolic.cpp  test_jit.cpp  thrust-sort.cpp  thrust-sort.cu  utests.cpp  vector.cpp  viennacl_cg.cpp
examples/boost.compute/: CMakeLists.txt  rowapi.cpp  scan.cpp  sort.cpp  vecsum.cpp  vecsum_compute.cpp  vecsum_vexcl.cpp
examples/mpi/: CMakeLists.txt  disordered_lattice.cpp  lorenz_ensemble.cpp  mpitests.cpp
examples/simple/: CMakeLists.txt
examples/viennacl/: CMakeLists.txt  cg.cpp  genproblem.hpp  solvers.cpp
oclutil/: devlist.hpp  oclutil.hpp  reduce.hpp  spmat.hpp  util.hpp  vector.hpp
tests/: CMakeLists.txt  boost_compute_scan.cpp  boost_compute_sort.cpp  cast.cpp  clogs_scan.cpp  clogs_sort.cpp  context.cpp  context_setup.hpp  cusparse.cpp  custom_kernel.cpp  deduce.cpp  dummy1.cpp  dummy2.cpp  eval.cpp  events.cpp  fft.cpp  generator.cpp  image.cpp  macos.cpp  mba.cpp  multi_array.cpp  multivector_arithmetics.cpp  multivector_create.cpp  random.cpp  random_vector.hpp  reduce_by_key.cpp  scan.cpp  scan_by_key.cpp  sort.cpp  sparse_matrices.cpp  spmv.cpp  stencil.cpp  svm.cpp  tagged_terminal.cpp  temporary.cpp  tensordot.cpp  threads.cpp  types.cpp  vector_arithmetics.cpp  vector_construct.cpp  (+5 more)
vexcl/: backend.hpp  builtins.hpp  cache.hpp  cast.hpp  constant_address_space.hpp  constants.hpp  devlist.hpp  element_index.hpp  enqueue.hpp  eval.hpp  exclusive.hpp  fft.hpp  function.hpp  gather.hpp  generator.hpp  image.hpp  logical.hpp  mba.hpp  mpi.hpp  multi_array.hpp  multivector.hpp  operations.hpp  pointer_qualifiers.hpp  profiler.hpp  random.hpp  reduce.hpp  reduce_by_key.hpp  reduce_proto.hpp  reductor.hpp  scan.hpp  scan_by_key.hpp  sort.hpp  spmat.hpp  stencil.hpp  svm.hpp  svm_vector.hpp  tagged_terminal.hpp  tagged_terminals.hpp  temporary.hpp  tensordot.hpp  (+8 more)
vexcl/backend/: common.hpp  compute.hpp  cuda.hpp  hip.hpp  jit.hpp  maxeler.hpp  opencl.hpp
vexcl/backend/compute/: compiler.hpp  context.hpp  device_vector.hpp  error.hpp  event.hpp  filter.hpp  image.hpp  kernel.hpp  svm.hpp  svm_vector.hpp
vexcl/backend/cuda/: compiler.hpp  compiler_nvcc.hpp  compiler_nvrtc.hpp  context.hpp  csr.inl  cusparse.hpp  device_vector.hpp  error.hpp  event.hpp  fft.hpp  filter.hpp  hybrid_ell.inl  kernel.hpp  random.hpp  source.hpp  svm.hpp  svm_vector.hpp  texture_object.hpp  types.hpp
vexcl/backend/cuda/random/: philox.hpp  threefry.hpp
vexcl/backend/hip/: compiler.hpp  context.hpp  csr.inl  cusparse.hpp  device_vector.hpp  error.hpp  event.hpp  filter.hpp  hybrid_ell.inl  kernel.hpp  source.hpp  svm_vector.hpp  texture_object.hpp
vexcl/backend/jit/: compiler.hpp  context.hpp  device_vector.hpp  event.hpp  filter.hpp  kernel.hpp  source.hpp
vexcl/backend/maxeler/: compiler.hpp  context.hpp  device_vector.hpp  filter.hpp  function.hpp  kernel.hpp  source.hpp
vexcl/backend/opencl/: compiler.hpp  context.hpp  defines.hpp  device_vector.hpp  error.hpp  event.hpp  fft.hpp  filter.hpp  image.hpp  kernel.hpp  random.hpp  source.hpp  svm.hpp  svm_vector.hpp  types.hpp
vexcl/backend/opencl/fft/: kernels.hpp  plan.hpp  unrolled_dft.hpp
vexcl/backend/opencl/random/: philox.hpp  threefry.hpp
vexcl/detail/: backtrace.hpp  fusion.hpp
vexcl/fft/: CLFFT.h  CLFFTContext.cpp  CLFFTContext.h  CLFFTErrors.cpp  CLFFTErrors.h  CLFFTEvents.h  FFTKernels.cl  TestFunctions.cpp  TestFunctions.h  context.hpp  kernels.hpp  plan.hpp  t_benchmarks.cpp  t_clfft.cpp  unrolled_dft.hpp
vexcl/generator/: symbolic.hpp
vexcl/mpi/: mpi.hpp  multivector.hpp  operations.hpp  reduce.hpp  reductor.hpp  spmat.hpp  util.hpp  vector.hpp
vexcl/random/: philox.hpp  threefry.hpp
vexcl/sparse/: csr.hpp  distributed.hpp  ell.hpp  matrix.hpp  product.hpp  spmv_ops.hpp  tag_matrix.hpp
vexcl/spmat/: ccsr.hpp  csr.hpp  csr.inl  hybrid_ell.hpp  hybrid_ell.inl  inline_spmv.hpp
